# semantle

./: .gitignore  dodo.py  main.py  pyproject.toml  seed.txt  similar.py
semantle/: tools.py
