[tool.poetry]
name = "semantle"
version = "0.1.0"
description = ""
authors = ["Gilad Kutiel <gilad.kutiel@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.*"
requests = "^2.28.1"
tqdm = "^4.64.0"
pandas = "^1.4.3"
gensim = "^4.2.0"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
rope = "^1.2.0"
autopep8 = "^1.6.0"
pytest = "^7.1.2"
pytest-watch = "^4.2.0"
doit = "^0.36.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
